<resources>
    <string name="app_name">UTA_UBS</string>
    <string name="wc">Welcome to University Bazaar System</string>
    <string name="club">UBS Club page </string>
    <string name="join">Join an existing clubs</string>
    <string name="create">Create a new club</string>
    <string name="manage">Manage member\'s club(s)</string>
    <string name="trade">Trade Page</string>
    <string name="sell">Sell your items</string>
    <string name="buy">Buy items</string>
    <string name="at">Attempts: </string>
    <string name="post">Public Post </string>
    <string name="email">Communication </string>
    <string name="read_post">Read Post</string>
    <string name="trade_options">Trade Options</string>
    <string name="university_bazaar_system">University Bazaar System</string>
    <string name="public_post_option">Public Post Option</string>
    <string name="to">To</string>
    <string name="sub">Subject</string>
    <string name="msg">Message</string>
    <string name="send">Send</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
</resources>
