<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sendmsg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.xakr.uta_ubs.sendmsg">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to"
        android:id="@+id/select"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sub"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/msg"
        android:layout_weight="1"
        android:gravity="top"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_gravity="end"
        android:id="@+id/send10"/>


</LinearLayout>
