<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wcpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E0F2F1"
    tools:context="com.example.xakr.uta_ubs.loginpage">

    <Button
        android:text="@string/trade"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:onClick="homemenu"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="24dp"
        android:id="@+id/button7" />

    <Button
        android:text="@string/post"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:layout_below="@+id/button7"
        android:onClick="homemenu"
        android:layout_alignStart="@+id/button7"
        android:layout_marginTop="25dp"
        android:id="@+id/button8" />

    <Button
        android:text="@string/email"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:textColor="#FFFFFF"
        android:onClick="homemenu"
        android:layout_below="@+id/button8"
        android:layout_alignStart="@+id/button8"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:layout_marginTop="18dp"
        android:id="@+id/button9" />

    <TextView
        android:text="@string/wc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#000000"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <SearchView
        android:layout_width="222dp"
        android:layout_height="55dp"
        android:id="@+id/search"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/textView5"
        android:layout_toStartOf="@+id/button007"
        android:background="#6600695c"
        android:layout_marginEnd="31dp"
        tools:background="?android:attr/textColorSearchUrl" />

    <Button
        android:text="Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button007"
        android:layout_alignTop="@+id/search"
        android:layout_alignEnd="@+id/textView5"
        android:background="#098766"
        android:textColor="#FFFFFF"
        android:onClick="homemenu"
        android:layout_below="@+id/textView5"
         />

    <Button
        android:text="@string/club"

        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:textColor="#FFFFFF"
        android:ems="10"
        android:onClick="homemenu"
        android:layout_marginTop="60dp"
        android:id="@+id/button4"
        android:layout_below="@+id/search"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
