<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tradepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E0F2F1"
    tools:context="com.example.xakr.uta_ubs.tradepage">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/university_bazaar_system"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:textColor="#FFFFFF"
        android:ems="10"
        android:id="@+id/button6"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:textColor="#FFFFFF"
        android:ems="10"
        android:id="@+id/button5"
        android:layout_marginTop="57dp"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/button6" />

</RelativeLayout>
